--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
             <div class="social-icons-container">
                 <span class="socials-text"><button class="pulse-button"><i class="fa fa-share" aria-hidden="true"></i></button></span>
                 <ul class="socialicons">
-                    <li><a href="https://www.linkedin.com/in/ravi-gupta-8b44ab180/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
@@ -730,7 +730,7 @@
                                                 </div>
                                                 <div class="col-md-7 no-padding">
                                                     <div class="progress">
-                                                        <div class="progress-bar bg-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 68%">
+                                                        <div class="progress-bar bg-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -785,7 +785,7 @@
                                                 </div>
                                                 <div class="col-md-7 no-padding">
                                                     <div class="progress">
-                                                        <div class="progress-bar bg-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 55%">
+                                                        <div class="progress-bar bg-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 72%">
                                                         </div>
                                                     </div>
                                                 </div>
@@ -911,10 +911,10 @@
             <section id="portfolio">
                 <ul class="cats-filter" id="portfolio-filter">
                     <li><a href="" class="current transition" data-filter="*">All</a></li>
-                    <li><a href="" class="transition" data-filter=".webdesign">WebDesign</a></li>
-                    <li><a href="" class="transition" data-filter=".photoghraphy">Photoghraphy</a></li>
-                    <li><a href="" class="transition" data-filter=".illustration">Illustration</a></li>
-                    <li><a href="" class="transition" data-filter=".print">Print</a></li>
+                    <li><a href="" class="transition" data-filter=".webdesign">Github</a></li>
+                    <li><a href="" class="transition" data-filter=".photoghraphy">LinkedIn</a></li>
+                    <li><a href="" class="transition" data-filter=".illustration">Codechef</a></li>
+                    <li><a href="" class="transition" data-filter=".print">Hackerank</a></li>
                     <li><a href="" class="transition" data-filter=".animation">Animation</a></li>
                 </ul>
                 <div class="extra-text">Our Works which makes you just wow</div>
@@ -928,9 +928,11 @@
 
                     </li>
                     <li class="webdesign">
-                        <a href="www.linkedin.com" target="_blank">
-                            LINKED IN
-                        </a>
+                        <div class="ex-box">
+                            <h2>GITHUB</h2>
+                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">GITHUB LINK</a></h4>
+
+                        </div>
                     </li>
                     <li class="photoghraphy">
                         <a href="images/3.jpg" class="folio">
@@ -954,7 +956,7 @@
                         </a>
                     </li>
                     <li class="webdesign print">
-                        <a href="images/5.jpg" class="folio">
+                        <a href="www.google.com" class="folio">
                             <img src="images/6-thumb.jpg" alt="">
                             <h2 class="title">The yellow</h2>
                             <span class="categorie">Webdesign / Print</span>
@@ -962,7 +964,7 @@
                     </li>
                     <li class="photoghraphy">
                         <a href="images/2.jpg" class="folio">
-                            <img src="images/7-thumb.jpg" alt="">
+                            <img src="images/7-thumb.jpg" alt="www.abesit.in">
                             <h2 class="title">Black bird</h2>
                             <span class="categorie">Photoghraphy</span>
                         </a>
@@ -983,10 +985,10 @@
                 <div class="contact-info">
                     <h3 class="main-heading"><span>Contact info</span></h3>
                     <ul>
-                        <li>4630 Geneva Street NY USA<br /><br /></li>
-                        <li>EMAIL: tim.wilson@yahoo.com</li>
-                        <li>PHOME: 917-508-9924</li>
-                        <li>WEBSITE: www.timwilson.io</li>
+                        <li>H No-314 New Kot Goan, Ghaziabad<br /><br /></li>
+                        <li>EMAIL: raviguptaraat1511@gmail.com</li>
+                        <li>PHOME: 9716787081</li>
+                        <li>WEBSITE: www.ravi9607.github.com</li>
                     </ul>
                 </div>
                 <div class="contact-form">
