--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
             </section>
             <!-- /Portfolio -->
             <section id="contact">
-                <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28024.602586524452!2d77.10554486473156!3d28.597517055711215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1cea3e56dd05%3A0xb4616dffb2450129!2sDelhi%20Cantonment%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1574172903660!5m2!1sen!2sin"
+                <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d111989.31313230158!2d77.3249880596176!3d28.699635117527425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cf1bb41c50fdf%3A0xe6f06fd26a7798ba!2sGhaziabad%2C%20Uttar%20Pradesh!5e0!3m2!1sen!2sin!4v1600873817866!5m2!1sen!2sin"
                         width="300" height="100%" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
                 <div class="contact-info">
                     <h3 class="main-heading"><span>Contact info</span></h3>
@@ -988,7 +988,7 @@
                         <li>H No-314 New Kot Goan, Ghaziabad<br /><br /></li>
                         <li>EMAIL: raviguptaraat1511@gmail.com</li>
                         <li>PHOME: 9716787081</li>
-                        <li>WEBSITE: www.ravi9607.github.com</li>
+                        <li>WEBSITE: </li>
                     </ul>
                 </div>
                 <div class="contact-form">
