--- a/index.html
+++ b/index.html
@@ -911,52 +911,47 @@
             <section id="portfolio">
                 <ul class="cats-filter" id="portfolio-filter">
                     <li><a href="" class="current transition" data-filter="*">All</a></li>
-                    <li><a href="" class="transition" data-filter=".webdesign">Github</a></li>
-                    <li><a href="" class="transition" data-filter=".photoghraphy">LinkedIn</a></li>
-                    <li><a href="" class="transition" data-filter=".illustration">Codechef</a></li>
-                    <li><a href="" class="transition" data-filter=".print">Hackerank</a></li>
-                    <li><a href="" class="transition" data-filter=".animation">Animation</a></li>
                 </ul>
-                <div class="extra-text">Our Works which makes you just wow</div>
+                <div class="extra-text">ALL MY WORKS</div>
                 <ul id="portfolio-list">
                     <li class="illustration print">
-                        <a href="images/mar.jpg" class="folio">
-                            <img src="images/1-thumb.jpg" alt="Image Title">
-                            <h2 class="title">Hello Goodbye</h2>
-                            <span class="categorie">Print / Illustration</span>
-                        </a>
-
-                    </li>
-                    <li class="webdesign">
                         <div class="ex-box">
                             <h2>GITHUB</h2>
                             <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">GITHUB LINK</a></h4>
 
                         </div>
+
+                    </li>
+                    <li>
+                        <div class="ex-box">
+                            <h2>LINKEDIN</h2>
+                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">LINKEDIN LINK</a></h4>
+
+                        </div>
                     </li>
                     <li class="photoghraphy">
-                        <a href="images/3.jpg" class="folio">
-                            <img src="images/2-thumb.jpg" alt="">
-                            <h2 class="title">Help us</h2>
-                            <span class="categorie">Photography</span>
-                        </a>
+                        <div class="ex-box">
+                            <h2>CODECHEF</h2>
+                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">CODECHEF LINK</a></h4>
+
+                        </div>
                     </li>
                     <li class="animation print">
-                        <a href="images/6.jpg" class="folio">
-                            <img src="images/4-thumb.jpg" alt="">
-                            <h2 class="title">Sunshine</h2>
-                            <span class="categorie">Print / Animation</span>
-                        </a>
+                        <div class="ex-box">
+                            <h2>HACKERANK</h2>
+                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">HACKERANK LINK</a></h4>
+
+                        </div>
                     </li>
                     <li class="animation">
-                        <a href="images/1.jpg" class="folio">
-                            <img src="images/5-thumb.jpg" alt="">
-                            <h2 class="title">Come together</h2>
-                            <span class="categorie">Animation</span>
+                        <a href="images/6.jpg" class="folio">
+                            <img src="images/6-thumb.jpg" alt="">
+                            <h2 class="title">The yellow</h2>
+                            <span class="categorie">Webdesign / Print</span>
                         </a>
                     </li>
                     <li class="webdesign print">
-                        <a href="www.google.com" class="folio">
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" class="folio">
                             <img src="images/6-thumb.jpg" alt="">
                             <h2 class="title">The yellow</h2>
                             <span class="categorie">Webdesign / Print</span>
