--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                     <h1>RAVI GUPTA</h1>
                     <h3></h3>
                     <br>
-                    <p>I like to make cool and creative designs. My design stash is always full of refreshing ideas. Feel free to take a look around my Vcard.</p>
+                    <p>Learning something new every day</p>
                 </div>
                 <ul class="personal-info">
                     <li><label>Name</label><span>RAVI GUPTA</span></li>
@@ -636,7 +636,7 @@
                     <li><label>Address</label><span>H NO 314 NEW KOT GAON, GHAZIABAD</span></li>
                     <li><label>Email</label><span class="word-wrap">RAVIGUPTARAAT1511@GMAIL.COM</span></li>
                     <li><label>Phone</label><span>9716787081</span></li>
-                    <li><label>Website</label><span class="word-wrap"><a href="www.abesit.in">www.abesit.in</a></span></li>
+                    <li><label>Website</label><span class="word-wrap"><a href="">ravi9607.github.io</a></span></li>
                 </ul>
             </div>
             <!-- /Profile -->
