--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                     <li class="illustration print">
                         <div class="ex-box">
                             <h2>GITHUB</h2>
-                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">GITHUB LINK</a></h4>
+                            <h4><a href="https://github.com/ravi9607/" target="_blank">GITHUB LINK</a></h4>
 
                         </div>
 
@@ -925,33 +925,26 @@
                     <li>
                         <div class="ex-box">
                             <h2>LINKEDIN</h2>
-                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">LINKEDIN LINK</a></h4>
+                            <h4><a href="https://www.linkedin.com/in/ravi-gupta-8b44ab180/" target="_blank">LINKEDIN LINK</a></h4>
 
                         </div>
                     </li>
                     <li class="photoghraphy">
                         <div class="ex-box">
                             <h2>CODECHEF</h2>
-                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">CODECHEF LINK</a></h4>
+                            <h4><a href="https://www.codechef.com/users/how_r_u" target="_blank">CODECHEF LINK</a></h4>
 
                         </div>
                     </li>
                     <li class="animation print">
                         <div class="ex-box">
                             <h2>HACKERANK</h2>
-                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" target="_blank">HACKERANK LINK</a></h4>
+                            <h4><a href="https://www.hackerrank.com/raviguptaraat151" target="_blank">HACKERANK LINK</a></h4>
 
                         </div>
                     </li>
                     <li class="animation">
                         <a href="images/6.jpg" class="folio">
-                            <img src="images/6-thumb.jpg" alt="">
-                            <h2 class="title">The yellow</h2>
-                            <span class="categorie">Webdesign / Print</span>
-                        </a>
-                    </li>
-                    <li class="webdesign print">
-                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" class="folio">
                             <img src="images/6-thumb.jpg" alt="">
                             <h2 class="title">The yellow</h2>
                             <span class="categorie">Webdesign / Print</span>
