--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         
         #portfolio-list {
             width: 820px;
-            overflow: hidden;
+            /*overflow: hidden;*/
         }
         
         #portfolio-list li {
@@ -609,7 +609,6 @@
             <div class="social-icons-container">
                 <span class="socials-text"><button class="pulse-button"><i class="fa fa-share" aria-hidden="true"></i></button></span>
                 <ul class="socialicons">
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
@@ -667,7 +666,7 @@
                                         <div class="left-name bg-color-1">
                                             <h2>Ravi<span class="text-color">Gupta</span></h2>
                                             <h5></h5>
-                                            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed</p>
+                                            <p></p>
                                         </div>
                                         <div class="left-address">
                                             <ul>
@@ -973,7 +972,7 @@
                 <div class="contact-info">
                     <h3 class="main-heading"><span>Contact info</span></h3>
                     <ul>
-                        <li>H No-314 New Kot Goan, Ghaziabad<br /><br /></li>
+                        <li>H No-314, New Kot Goan, Ghaziabad<br /><br /></li>
                         <li>EMAIL: raviguptaraat1511@gmail.com</li>
                         <li>PHOME: 9716787081</li>
                         <li>WEBSITE: </li>
