--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                                             <h5></h5>
                                             <p>
                                                 <h4></h4><a href="https://github.com/ravi9607/"><b>GITHUB PROFILE</b></a></h4>
-                                                <h4></h4><a href="https://www.codechef.com/users/avi_1511"><b>CODECHEG PROFILE LINK</b></a></h4>
+                                                <h4></h4><a href="https://www.codechef.com/users/avi_1511"><b>CODECHEG PROFILE</b></a></h4>
                                                 <h4></h4><a href="https://www.linkedin.com/in/ravi-gupta-8b44ab180/"><b>LINKEDIN PROFILE</b></a></h4>
 
                                             </p>
