--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
                         <li>H No-314, New Kot Goan, Ghaziabad<br /><br /></li>
                         <li>EMAIL: raviguptaraat1511@gmail.com</li>
                         <li>PHOME: 9716787081</li>
-                        <li>WEBSITE: </li>
+                        <li>WEBSITE: https://ravi9607.github.io/ </li>
                     </ul>
                 </div>
                 <div class="contact-form">
