--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
@@ -407,7 +407,6 @@
         
         #portfolio-list {
             width: 820px;
-            overflow: hidden;
         }
         
         #portfolio-list li {
@@ -686,25 +685,33 @@
                                         </div>
                                         <div class="ex-box">
                                             <h2>Chat app with Encryption using Firebase </h2>
-                                            <h4><a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-">GITHUB LINK</a></h4>
+                                            <h4>
+                                                <a href="https://github.com/ravi9607/ChatAppWithEncryptionUsingFirebase-" class="fa fa-github"><b> LINK</b></a>
+                                            </h4>
                                             <p>• An application which uses encrypted and decrypted messages to communicate between two parties using <b>Advanced Encryption Standard (AES).</b>
                                             </p>
                                         </div>
                                         <div class="ex-box">
                                             <h2>Password Encryption and Decryption using AES algorithm</h2>
-                                            <h4><a href="https://github.com/ravi9607/Password_EncryptionAndDecryption">GITHUB LINK</a></h4>
+                                            <h4>
+                                                <a href="https://github.com/ravi9607/Password_EncryptionAndDecryption" class="fa fa-github"> <b> LINK</b></a>
+                                            </h4>
                                             <p>• Password based Encryption / Decryption on Android with AES Algorithm</p>
                                         </div>
                                         <div class="ex-box">
                                             <h2>Facial Attendance System </h2>
-                                            <h4><a href="https://github.com/ravi9607/Face-Detection-">GITHUB LINK</a></h4>
+                                            <h4>
+                                                <a href="https://github.com/ravi9607/Face-Detection-" class="fa fa-github"> <b> LINK</b></a>
+                                            </h4>
                                             <p>• A facial biometric attendance system using openCV, pandas and face recognition libraries in Python</p>
                                             <p>• Performs realtime face detection and verifies using Pandas, Numpy and CSV
                                             </p>
                                         </div>
                                         <div class="ex-box">
                                             <h2>Youtube Live Subscribe Counter</h2>
-                                            <h4><a href="https://github.com/ravi9607/youtubeLiveSubscribeCounter">GITHUB LINK</a></h4>
+                                            <h4>
+                                                <a href="https://github.com/ravi9607/youtubeLiveSubscribeCounter" class="fa fa-github"> <b> LINK</b></a>
+                                            </h4>
                                             <p>• Shows subscription Count of a YouTube channel (updated every second)</p>
                                             <p>• Accepts YouTube URLs, Channel IDs, or any keywords in general; It acts like a YouTube channel search engine </p>
 
