--- a/index.html
+++ b/index.html
@@ -976,6 +976,13 @@
                             <span class="categorie">Illustration</span>
                         </a>
                     </li>
+                    <li class="illustration">
+                        <a href="images/.jpg" class="folio">
+                            <img src="images/8-thumb.jpg" alt="">
+                            <h2 class="title">Revolution</h2>
+                            <span class="categorie">Illustration</span>
+                        </a>
+                    </li>
                 </ul>
             </section>
             <!-- /Portfolio -->
